--- a/typlore/src/index.css
+++ b/typlore/src/index.css
@@ -2,11 +2,12 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background: #ffffff;
+  /* background: #ffffff; */
   color: #606063;
   overflow: hidden;
   font-family: "Montserrat", sans-serif;
   place-items: center;
+  z-index: 100;
 }
 
 #root {
@@ -17,6 +18,8 @@ body {
 
 canvas {
   position: absolute;
+  z-index: 999;
+
 }
 
 .scrollArea {
@@ -26,4 +29,5 @@ canvas {
   width: 100vw;
   height: 100vh;
   overflow: auto;
+  z-index: 1;
 }
